# codec

./: .gitignore  README.md  pyproject.toml  setup.py
catlass-faInfer-shared-prefix/: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  OAT.xml  OWNERS  README.md  SECURITYNOTE.md  Third_Party_Open_Source_Software_List.yaml
catlass-faInfer-shared-prefix/cmake/modules/: CMakeASCENDInformation.cmake
catlass-faInfer-shared-prefix/docs/: README.md
catlass-faInfer-shared-prefix/docs/1_Practice/: 01_quick_start.md  02_host_example_assembly.md  08_evaluation.md  10_matmul_optimization.md
catlass-faInfer-shared-prefix/docs/2_Design/: 00_project_overview.md
catlass-faInfer-shared-prefix/docs/3_API/: README.md  gemm_api.md
catlass-faInfer-shared-prefix/examples/: CMakeLists.txt
catlass-faInfer-shared-prefix/examples/00_basic_matmul/: README.md
catlass-faInfer-shared-prefix/examples/01_batched_matmul/: README.md
catlass-faInfer-shared-prefix/examples/02_grouped_matmul_slice_m/: README.md
catlass-faInfer-shared-prefix/examples/03_matmul_add/: README.md
catlass-faInfer-shared-prefix/examples/04_padding_matmul/: README.md
catlass-faInfer-shared-prefix/examples/05_grouped_matmul_slice_k/: README.md
catlass-faInfer-shared-prefix/examples/06_optimized_matmul/: README.md
catlass-faInfer-shared-prefix/examples/07_grouped_matmul_slice_m_per_token_dequant_moe/: README.md
catlass-faInfer-shared-prefix/examples/08_grouped_matmul/: README.md
catlass-faInfer-shared-prefix/examples/09_splitk_matmul/: README.md
catlass-faInfer-shared-prefix/examples/102_dynamic_optimized_matmul/: .gitignore  CMakeLists.txt  README.md  dynamic_optimized_matmul.cpp
catlass-faInfer-shared-prefix/examples/103_dynamic_optimized_quant_matmul_per_token_basic/: CMakeLists.txt  README.md  dynamic_optimized_quant_matmul_per_token_basic.cpp
catlass-faInfer-shared-prefix/examples/10_grouped_matmul_slice_m_per_token_dequant/: 10_grouped_matmul_slice_m_per_token_dequant.md  README.md
catlass-faInfer-shared-prefix/examples/11_grouped_matmul_slice_k_per_token_dequant/: README.md  grouped_matmul_slice_k_per_token_dequant.cpp
catlass-faInfer-shared-prefix/examples/12_quant_matmul/: README.md
catlass-faInfer-shared-prefix/examples/13_basic_matmul_tla/: CMakeLists.txt  README.md  basic_matmul_tla.cpp
catlass-faInfer-shared-prefix/examples/14_optimized_matmul_tla/: CMakeLists.txt  README.md  optimized_matmul_tla.cpp
catlass-faInfer-shared-prefix/examples/15_gemm/: README.md
catlass-faInfer-shared-prefix/examples/16_group_gemm/: README.md
catlass-faInfer-shared-prefix/examples/17_gemv_aiv/: README.md
catlass-faInfer-shared-prefix/examples/18_gemv_aic/: README.md
catlass-faInfer-shared-prefix/examples/19_mla/: README.md  kernel_common.hpp  mla.cpp  mla.md  mla_kernel.cpp  mla_kernel_tp1_spec.cpp  mla_tiling.cpp
catlass-faInfer-shared-prefix/examples/20_matmul_bias/: README.md
catlass-faInfer-shared-prefix/examples/21_basic_matmul_preload_zN/: README.md
catlass-faInfer-shared-prefix/examples/22_padding_splitk_matmul/: README.md
catlass-faInfer-shared-prefix/examples/23_flash_attention_infer/: README.md  fai.cpp  fai_kernel.cpp  fai_tiling.cpp  gen_data.py  kernel_common.hpp
catlass-faInfer-shared-prefix/examples/24_conv_bias/: README.md
catlass-faInfer-shared-prefix/examples/25_matmul_full_loadA/: README.md
catlass-faInfer-shared-prefix/examples/26_matmul_relu/: README.md
catlass-faInfer-shared-prefix/examples/27_matmul_gelu/: README.md
catlass-faInfer-shared-prefix/examples/28_matmul_silu/: README.md
catlass-faInfer-shared-prefix/examples/29_a2_fp8_e4m3_matmul/: README.md
catlass-faInfer-shared-prefix/examples/30_w8a16_matmul/: README.md
catlass-faInfer-shared-prefix/examples/31_small_matmul/: README.md
catlass-faInfer-shared-prefix/examples/32_w4a8_matmul/: README.md  w4a8.cpp
catlass-faInfer-shared-prefix/examples/33_basic_conv2d/: README.md  basic_conv2d.cpp
catlass-faInfer-shared-prefix/examples/34_single_core_splitk_matmul/: 34_single_splitk_matmul.md  README.md
catlass-faInfer-shared-prefix/examples/37_streamk_matmul/: README.md
catlass-faInfer-shared-prefix/examples/38_w4a4_matmul_per_token_per_channel_dequant/: README.md  w4a4_matmul_per_token_per_channel_dequant.cpp
catlass-faInfer-shared-prefix/examples/39_big_matmul_tla/: CMakeLists.txt  README.md  big_matmul_tla.cpp
catlass-faInfer-shared-prefix/examples/40_flash_attention_infer_tla/: CMakeLists.txt  README.md  combine.py  fai.cpp  fai_kernel.cpp  gen_prefix_suffix_data.py  kernel_common.hpp  run.sh
catlass-faInfer-shared-prefix/examples/41_sparse_matmul_tla/: CMakeLists.txt  README.md  sparse_gen_data.py  sparse_matmul_tla.cpp
catlass-faInfer-shared-prefix/examples/42_quant_optimized_matmul_tla/: CMakeLists.txt  README.md  quant_optimized_matmul_tla.cpp
catlass-faInfer-shared-prefix/examples/43_ascend950_basic_matmul/: CMakeLists.txt  README.md  basic_matmul_tla.cpp
catlass-faInfer-shared-prefix/examples/44_quant_matmul_full_loadA_tla/: 44_quant_matmul_full_loadA_tla.md  CMakeLists.txt  README.md  quant_matmul_full_loadA_tla.cpp
catlass-faInfer-shared-prefix/examples/45_strided_batched_matmul_tla/: CMakeLists.txt  README.md  strided_batched_matmul_tla.cpp
catlass-faInfer-shared-prefix/examples/46_ascend950_matmul_fixpipe_opti/: 46_ascend950_matmul_fixpipe_opti.md  CMakeLists.txt  README.md  matmul_fixpipe_opti.cpp
catlass-faInfer-shared-prefix/examples/47_ascend950_grouped_matmul_slice_m_per_token_dequant/: CMakeLists.txt  README.md  grouped_matmul_slice_m_per_token_dequant_tla.cpp
catlass-faInfer-shared-prefix/examples/48_ascend950_grouped_matmul_slice_m_per_tensor_per_channel_dequant/: CMakeLists.txt  README.md  grouped_matmul_slice_m_per_tensor_per_channel_dequant.cpp
catlass-faInfer-shared-prefix/scripts/: build.sh
catlass-faInfer-shared-prefix/tests/: CMakeLists.txt  run_all_test.sh  test_compile.sh  test_example.py  test_mstuner.py  test_python_extension.py
catlass-faInfer-shared-prefix/tools/: CMakeLists.txt
(+312 files in other folders)
