# ----------------------------------------------------------------------------
# Copyright (c) 2026 Huawei Technologies Co., Ltd.
# This file is a part of the CANN Open Software.
# This program is free software, you can redistribute it and/or modify it under the terms and conditions of
# CANN Open Software License Agreement Version 2.0 (the "License").
# Please refer to the License for details. You may not use this file except in compliance with the License.
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
# INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
# See LICENSE in the root of the software repository for the full text of the License.
# ----------------------------------------------------------------------------

set(FAI_SOURCES
    fai.cpp)

set_source_files_properties(${FAI_SOURCES} PROPERTIES LANGUAGE ASCEND)
catlass_example_add_executable(49_ascend950_flash_attention_infer mix ${FAI_SOURCES})
target_include_directories(49_ascend950_flash_attention_infer PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(49_ascend950_flash_attention_infer PRIVATE m)
